fix font flicker

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,2 +1,18 @@
 /* please use styled-components and GlobalStyles in BaseContainer */
 
+@font-face {
+  font-family: NeutraText;
+  src:  url('/fonts/NeutraText-Bold.otf');
+  /*[unicode-range: <urange>#;]?
+  [font-variant: <font-variant>;]?
+  [font-feature-settings: normal|<feature-tag-value>#;]?
+  [font-stretch: <font-stretch>;]?
+  [font-weight: <weight>];
+  [font-style: <style>];*/
+}
+
+html, body, #root {
+  height: 100%;
+  width: 100%;
+  font-family: NeutraText, sans-serif;
+}
